--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+body { font-family: 'Montserrat', sans-serif !important;
 
+}
 
 
 .jumbotron {
     padding-top: 2rem ;
     background-color: #ebe8e8;
-
 }
 
 
